Add Networking domain and normalize Programming Languages guides
Publish a new Networking section (protocols, DNS, CDNs, load balancers,
communication, application layer, API design at scale) with full
navigation wiring, section READMEs, and a home/README entry.

Normalize all 692 four-level guides across Networking and Programming
Languages to the shared learning-module contract: remove manual tables
of contents and answer-disclosure blocks, restrict Mermaid to
flowchart/sequenceDiagram, add a level-specific focus statement plus
Apply it / Verify your work sections, and end each guide with an
unanswered review-question list. Restructure the Go and Language
Internals roadmaps (READMEs, .pages nav) to include previously
unlinked branches, and fix directory-style and excluded-page links
across both domains.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>